# study_samplecode

./: .gitignore  README.md  gitremoteadd.sh  gitremoteremove.sh  gitsubtreeadd.sh
API/: README.md
API/apple.app.ios/: README.md
API/google.app.android/: README.md  settings.gradle
API/googlemaps.app.ios/: Podfile  README.md
API/kakaolink.app.ios/: Podfile  README.md
API/kakaologin.app.android/: README.md  build.gradle  settings.gradle
API/kakaologin.app.ios/: Podfile  README.md
API/kakaomap.app.android/: README.md  build.gradle
API/kakaomap.app.ios/: README.md
API/lea_jni.app.android/: README.md
API/lea_jni.app.android/lea_jni/app/src/main/cpp/: CMakeLists.txt  LEA_core.c  LEA_core.h  hello-jni.c  rot32.h
API/lea_wrapping.app.ios/: README.md
API/naverlogin.app.android/: README.md  settings.gradle
API/navermap.app.android/: README.md
API/naverpapago.app.android/: README.md  settings.gradle
API/naversearch.app.android/: README.md
API/okhttp_login.app.android/: README.md  build.gradle
API/retrofit_login.app.android/: README.md
API/shareapp.app.android/: README.md  settings.gradle
API/shareapp.app.ios/: Podfile  README.md
AR/: README.md
AUDIO/: README.md
AUDIO/soundeffect.app.android/: README.md
BLUETOOTH/: README.md
CAMERA/: README.md
CAMERA/bringbacktoapp.app.android/: README.md
CAMERA/camera2.app.android/: README.md  settings.gradle
CLIENTSERVER/: README.md
GRAPHICS/: README.md
LOCATION/: README.md
ML/: README.md
PHOTO/: README.md
SENSOR/: README.md
UI/: README.md
VIDEO/: README.md
VR/: README.md
(+696 files in other folders)
